修改我的页面的样式，添加关于我们，更换logo

--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
         "pages/search/search",
         "pages/order-check/index",
         "pages/goods/goods",
+        "pages/ucenter/about/index",
         "pages/ucenter/address/index",
         "pages/ucenter/address-detail/index",
         "pages/ucenter/index/index",
