A，增加生成分享图的功能 U，轮播图不自动滑动

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
         "pages/app-auth/index",
         "pages/category/index",
         "pages/cart/cart",
+        "pages/share/index",
         "pages/search/search",
         "pages/order-check/index",
         "pages/goods/goods",
