1、删除一些无效css代码 2、解决wx:key的warinng 3、删除无用的函数 4、取消订单时停止定时器 5、针对订单操作后，返回订单列表没有刷新的问题，添加一个标志（不过不是最好的办法，暂时这样吧） 6、修复再来一单，提交一次后，再返回再提交时出现订单不存在的bug

--- a/project.config.json
+++ b/project.config.json
@@ -4,10 +4,13 @@
 		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
+		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
 		"autoAudits": false,
+		"showShadowRootInWxmlPanel": true,
+		"scopeDataCheck": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": false,
 		"uploadWithSourceMap": true,
@@ -20,7 +23,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.9.4",
 	"appid": "wxf3d768d1818218f1",
-	"projectname": "%E6%B5%B7%E9%B8%A5%E5%95%86%E5%9F%8E",
+	"projectname": "%e6%b5%b7%e9%a3%8e%e5%b0%8f%e5%ba%97",
 	"isGameTourist": false,
 	"scripts": {
 		"beforeCompile": "",
