增加一个线下支付的按钮

--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
         "pages/ucenter/order-details/index",
         "pages/ucenter/express-info/index",
         "pages/ucenter/footprint/index",
-        "pages/payResult/payResult"
+        "pages/payResult/payResult",
+        "pages/payOffline/index"
     ],
     "window": {
         "backgroundTextStyle": "light",
